--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tooltip": "^1.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cross-env": "^7.0.3",
@@ -40,6 +41,7 @@
     "graphql": "^16.9.0",
     "jsonwebtoken": "9.0.2",
     "lucide-react": "^0.378.0",
+    "motion": "^11.18.0",
     "next": "^15.0.4",
     "payload": "latest",
     "payload-admin-bar": "^1.0.6",
